[gd_scene load_steps=8 format=2]

[ext_resource path="res://Interface/Ships/ShipStatusBadge.tscn" type="PackedScene" id=1]
[ext_resource path="res://Font/SmallBold.tres" type="DynamicFont" id=2]
[ext_resource path="res://Font/Small.tres" type="DynamicFont" id=3]
[ext_resource path="res://Font/Default.tres" type="DynamicFont" id=4]
[ext_resource path="res://sprite-action-black.png" type="Texture" id=5]
[ext_resource path="res://Interface/Ships/ShipButtonScript.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 33, 321, 30, 30 )

[node name="ShipButton" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -980.0
margin_bottom = -560.0
rect_min_size = Vector2( 300, 40 )
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 1

[node name="ShipName" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 8.0
rect_min_size = Vector2( 0, 8 )
custom_fonts/bold_font = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[b]text here[/b][color=#949495] FUEL: 90%"
text = "text here FUEL: 90%"
scroll_active = false

[node name="ButtonStatus" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 9.0
margin_right = 300.0
margin_bottom = 31.0
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/ButtonStatus"]
margin_left = 13.0
margin_right = 163.0
margin_bottom = 22.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 4 )
text = "INTERCEPTOR"
icon = SubResource( 1 )
flat = true
align = 0
expand_icon = true

[node name="ShipStatusBadge" parent="VBoxContainer/ButtonStatus" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 167.0
margin_top = 3.0
margin_right = 287.0
margin_bottom = 18.0

[node name="ShipWaypoint" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 300.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 8 )
custom_fonts/bold_font = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[right][color=#949495][b]PLANET[/b] X"
text = "PLANET X"
scroll_active = false
